<resources>
    <string name="app_name">CineWatch2.0</string>
    <string name="movie_recommendation_app">Movie Recommendation App</string>
    <string name="cinewatch">CineWatch</string>
    <string name="camera_picture">Camera Picture</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user">New User</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back!</string>
    <string name="Start_New">Start New</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="saved_movies">Save</string>
    <string name="sign_up">Sign Up</string>
    <string name="account">account</string>
    <string name="trailer">trailer</string>
    <string name="cardstack">cardstack</string>
    <string name="info">info</string>
    <string name="rating">rating</string>
    <string name="Start_New_here">New Here ? Sign up !</string>
    <string name="movie_actors">Movie Actors</string>
    <string name="movie_bio">Movie Bio</string>
    <string name="movie_platforms">Platforms</string>
    <string name="add_to_bookmarks_button">Add to Bookmarks</string>
    <string name="movie_poster">movie poster</string>
    <string name="movie_title">Movie Title</string>
    <string name="update_movie_subscriptions">Update Movie Subscriptions</string>
    <string name="select_your_subscription_options">Select your subscription options</string>
</resources>