<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink1"
    tools:context=".Swipe">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.lorentzos.flingswipe.SwipeFlingAdapterView
            android:id="@+id/card"
            android:layout_width="328dp"
            android:layout_height="501dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="64dp"
            android:layout_marginTop="125dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="151dp"
            android:backgroundTint="@color/cardview_dark_background"
            app:layout_constraintBottom_toTopOf="@+id/trailer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account"
            app:layout_constraintVertical_bias="0.348"
            app:max_visible="1"
            app:min_adapter_stack="8"
            app:rotation_degrees="20"
            tools:ignore="NotSibling" />

    </RelativeLayout>

    <Button
        android:id="@+id/info"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/trailer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:scaleType="fitXY"
        android:background="@drawable/baseline_info_24"
        android:contentDescription="@string/info"/>

    <Button
        android:id="@+id/scroll_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/account"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="fitXY"
        android:background="@drawable/baseline_search_24"
        android:contentDescription="@string/cardstack" />

    <Button
        android:id="@+id/trailer"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="32dp"
        android:scaleType="fitXY"
        android:background="@drawable/baseline_smart_display_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/trailer"/>

    <Button
        android:id="@+id/save"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/trailer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:scaleType="fitXY"
        android:background="@drawable/baseline_bookmarks_24"
        android:contentDescription="@string/saved_movies"/>

    <Button
        android:id="@+id/account"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        android:background="@drawable/baseline_account_circle_24"
        android:contentDescription="@string/account"/>


</androidx.constraintlayout.widget.ConstraintLayout>